[package]
name = "gibvaccine"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
lazy_static = "1"
open = "1"
rand = "0.8"
regex = "1"
scraper = "0.12"
tabwriter = { version = "1", features = ["ansi_formatting"] }
termion = "1"
ureq = "2.1"
